public/css/app.css
/* Styling from Drayton */

.move-right .exit-off-canvas {
	box-shadow:none;
}

#loginSubmit {
	width:100%;
}

#menuIcon{
	margin:1em;
}

.left-off-canvas-toggle{
	padding:10px;
}
.left-off-canvas-menu * {
	list-style-type: none;
	color:#fff;
}

.login-default-box{
	margin-top: 2em;
}

.loginText{
	text-align:center;
}
.off-canvas-wrap {
	height:100%;
}
.registerBtn {
	width:100%;
}

.register-default-box{
	margin-top: 2.5em;
}

.feedback{
	font-size:10px;
	margin-top: 2em;
}

.verificationPage{
	margin-top: 2em;
}

.verificationPage{
	margin-top: 2em;
}

#backtoLogin {
	width:100%;
}

.register-box{
	margin-top: 2em;
}

#request-password-button {
	width:100%;
}

.avatarImg{
	margin-bottom:1em;
}
.avatarImg img{
	width:100%;
	height:100%;
}
.usernameDashboard {
	font-size:20px;
}
.editAvatar {
	font-size:15px;
}
.editProfileText{
	font-size:15px;
}
.editProfileDashboard{
	width:100%;
}
.editProfileDashboard table{
	width:100%;
}

.uploadavatar{
	margin-top:2em;
}
.uploadImg{
	width:100%;
}
.editusername{
	margin-top:2em;
}
.usernamebtn{
	width:100%;
}
.editemail{
	margin-top:2em;
}
.emailbtn{
	width:100%;
}

